fix jump page bug

--- a/src/global.scss
+++ b/src/global.scss
@@ -287,13 +287,13 @@ ion-input {
  }
 
  .action-sheet-destructive .action-sheet-button-inner{
-  color:#ff0000;
+  color:#E77978;
   .action-sheet-icon{
     margin-top:-4px;
     margin-left:14px;
     margin-right:10px;
     color: #fff;
-    filter: drop-shadow(#ff0000 80px 0);
+    filter: drop-shadow(#E77978 80px 0);
     transform: translateX(-80px);
     overflow:hidden;
   }
